Fixing alignment of text inside code editor

--- a/src/less/inputs.less
+++ b/src/less/inputs.less
@@ -13,4 +13,7 @@ input, select, .CodeMirror {
     border-color: @lightBlue;
     outline: none;
   }
+  pre, .CodeMirror-lines {
+    padding: 0px;
+  }
 }
